--- a/.github/workflows/build_main.yaml
+++ b/.github/workflows/build_main.yaml
@@ -28,11 +28,8 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
-      - name: Install dependencies
-        run: |
-          pip install -U pip
-          pip install -r requirements.txt
       - name: Build
+        uses: eodash/eodash_catalog:0.1.11
         env:
           SH_INSTANCE_ID: ${{ secrets.SH_INSTANCE_ID }}
           SH_CLIENT_ID: ${{ secrets.SH_CLIENT_ID }}
