--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -28,14 +28,6 @@ jobs:
           submodules: 'true'
           ref: ${{ github.event.pull_request.head.ref }}
           repository: ${{ github.event.pull_request.head.repo.full_name }}
-      - name: Set up Python 3.12
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
-      - name: Install dependencies
-        run: |
-          pip install -U pip
-          pip install -r requirements.txt
       - name: changed-files
         id: changed-files
         uses: tj-actions/changed-files@v45
@@ -43,10 +35,12 @@ jobs:
         # with:
         #   since_last_remote_commit: true 
       - name: List all changed files
+        uses: eodash/eodash_catalog:0.1.11
         env:
           ALL_CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
         run: python .github/update_catalog_last_changes_pr.py
       - name: Build
+        uses: eodash/eodash_catalog:0.1.11
         env:
           SH_INSTANCE_ID: ${{ secrets.SH_INSTANCE_ID }}
           SH_CLIENT_ID: ${{ secrets.SH_CLIENT_ID }}
