--- a/.github/workflows/build_main.yaml
+++ b/.github/workflows/build_main.yaml
@@ -21,15 +21,11 @@ jobs:
       pull-requests: write
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
+    container: ghcr.io/eodash/eodash_catalog:0.1.11
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Set up Python 3.12
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
       - name: Build
-        uses: eodash/eodash_catalog:0.1.11
         env:
           SH_INSTANCE_ID: ${{ secrets.SH_INSTANCE_ID }}
           SH_CLIENT_ID: ${{ secrets.SH_CLIENT_ID }}
