--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -21,8 +21,7 @@ jobs:
       contents: write
       pages: write
       pull-requests: write
-    container:
-      image: eodash/eodash_catalog:0.1.11
+    container: ghcr.io/eodash/eodash_catalog:0.1.11
     steps:
       - name: Checkout
         uses: actions/checkout@v4
