--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -21,6 +21,7 @@ jobs:
       contents: write
       pages: write
       pull-requests: write
+      packages: read
     container: ghcr.io/eodash/eodash_catalog:0.1.11
     steps:
       - name: Checkout
