add container credentials

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -22,7 +22,12 @@ jobs:
       pages: write
       pull-requests: write
       packages: read
-    container: ghcr.io/eodash/eodash_catalog:0.1.11
+    container:
+      image: ghcr.io/eodash/eodash_catalog:0.1.11
+      credentials:
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    
     steps:
       - name: Checkout
         uses: actions/checkout@v4
