--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -22,8 +22,6 @@ jobs:
       pages: write
       pull-requests: write
       packages: read
-    container:
-      image: ghcr.io/eodash/eodash_catalog:0.1.11
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -41,12 +39,14 @@ jobs:
         env:
           ALL_CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
         run: python .github/update_catalog_last_changes_pr.py
-      - name: Build
+      - name: Build catalog
         env:
           SH_INSTANCE_ID: ${{ secrets.SH_INSTANCE_ID }}
           SH_CLIENT_ID: ${{ secrets.SH_CLIENT_ID }}
           SH_CLIENT_SECRET: ${{ secrets.SH_CLIENT_SECRET }}
-        run: eodash_catalog
+        run: |
+          docker pull ghcr.io/eodash/eodash_catalog:latest
+          docker run --rm -v "$PWD:/opt/eodash_catalog" ghcr.io/eodash/eodash_catalog:latest eodash_catalog
       - name: Deploy preview
         uses: rossjrw/pr-preview-action@v1
         with:
