--- a/.github/workflows/build_main.yaml
+++ b/.github/workflows/build_main.yaml
@@ -32,7 +32,7 @@ jobs:
           SH_CLIENT_SECRET: ${{ secrets.SH_CLIENT_SECRET }}
         run: |
           docker pull ghcr.io/eodash/eodash_catalog:latest
-          docker run --rm -v "$PWD:/opt/eodash_catalog" ghcr.io/eodash/eodash_catalog:latest eodash_catalog
+          docker run --rm -v "$PWD:/home/www-data/" -w "/home/www-data/" ghcr.io/eodash/eodash_catalog:latest eodash_catalog
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
