--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -46,7 +46,7 @@ jobs:
           SH_CLIENT_SECRET: ${{ secrets.SH_CLIENT_SECRET }}
         run: |
           docker pull ghcr.io/eodash/eodash_catalog:latest
-          docker run --rm -v "$PWD:/opt/eodash_catalog" ghcr.io/eodash/eodash_catalog:latest eodash_catalog
+          docker run --rm -v "$PWD:/home/www-data/" -w "/home/www-data/" ghcr.io/eodash/eodash_catalog:latest eodash_catalog
       - name: Deploy preview
         uses: rossjrw/pr-preview-action@v1
         with:
