--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -46,7 +46,7 @@ jobs:
           SH_CLIENT_SECRET: ${{ secrets.SH_CLIENT_SECRET }}
         run: |
           docker pull ghcr.io/eodash/eodash_catalog:latest
-          docker run --rm -v "$PWD:/home/www-data/" -u $(id -u):$(id -g) -w "/home/www-data/" ghcr.io/eodash/eodash_catalog:latest eodash_catalog
+          docker run -v "$PWD:/workspace" -w "/workspace" ghcr.io/eodash/eodash_catalog:latest eodash_catalog
       - name: Deploy preview
         uses: rossjrw/pr-preview-action@v1
         with:
