--- a/.github/workflows/preview_catalog.yaml
+++ b/.github/workflows/preview_catalog.yaml
@@ -63,13 +63,8 @@ jobs:
       -
         if: github.event.action != 'closed' && steps.get_pr_commit_message.outputs.should_skip != 'true'
         name: Build
-        env:
-            SH_INSTANCE_ID: ${{ secrets.SH_INSTANCE_ID }}
-            SH_CLIENT_ID: ${{ secrets.SH_CLIENT_ID }}
-            SH_CLIENT_SECRET: ${{ secrets.SH_CLIENT_SECRET }}
         run: |
-          docker pull ghcr.io/eodash/eodash_catalog:0.2.1
-          docker run -v "$PWD:/workspace" -w "/workspace" -e SH_INSTANCE_ID="$SH_INSTANCE_ID" -e SH_CLIENT_ID="$SH_CLIENT_ID" -e SH_CLIENT_SECRET="$SH_CLIENT_SECRET" ghcr.io/eodash/eodash_catalog:0.2.1 eodash_catalog
+          docker run -v "$PWD:/workspace" -w "/workspace" ghcr.io/eodash/eodash_catalog:0.3.33 eodash_catalog -gp
       - if: steps.get_pr_commit_message.outputs.should_skip != 'true'
         name: Deploy preview
         uses: rossjrw/pr-preview-action@v1
